--- a/MISA.Meinvoice.Kinesis.Customer/MISA.Meinvoice.Kinesis.Consumer.csproj
+++ b/MISA.Meinvoice.Kinesis.Customer/MISA.Meinvoice.Kinesis.Consumer.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
   </ItemGroup>
 
